# sicapel

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLASSES_MODIFICATION.md  DELETION_IMPLEMENTATION_PLAN.md  DEPLOYMENT.md  Dockerfile  IMPORT_IMPLEMENTATION_PLAN.md  NOTES.md  SICAPEL_IMPLEMENTATION_PLAN.md  dev_reset.sh  docker-compose.yml  pyproject.toml
app/: __init__.py  forms.py  helper.py  models.py  seed.py  services.py  uploads.py
app/blueprints/: academic_years.py  amnesties.py  auth.py  classes.py  dashboard.py  expulsion.py  students.py  users.py  violation_types.py  violations.py  warnings.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: _nav.html  _placeholder.html  _sidebar.html  base.html  macros.html
app/templates/academic_years/: form.html  index.html  rollover.html
app/templates/amnesties/: detail.html  form.html  index.html
app/templates/auth/: change_password.html  login.html
app/templates/classes/: form.html  index.html
app/templates/dashboard/: _stats.html  index.html
docker/: docker-entrypoint.sh  nginx.conf
migrations/: env.py
migrations/versions/: 71d2c1adcd81_initial.py  928e132ff17a_initial_schema.py  b7465218ae78_initial.py  dcbe02ab8874_initial.py
tests/: conftest.py  test_amnesties.py  test_apply_amnesty.py  test_auth.py  test_dashboard.py  test_deletion.py  test_enrollments.py  test_expulsion.py  test_letter_numbering.py  test_macros.py  test_navigation.py  test_output_encoding.py  test_pdfs.py  test_rollover.py  test_services.py  test_wali_kelas_scoping.py  test_warnings.py
(+21 files in other folders)
