[tool.poetry]
name = "sicapel"
version = "0.1.0"
description = ""
authors = ["Saiful Habib <sangpejuang32@gmail.com>"]
readme = "README.md"
packages = [{include = "sicapel", from = "src"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
