[project]
name = "sicapel"
version = "0.1.0"
description = "SICAPEL - Student disciplinary violation recording system"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-htmx>=0.4.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.27",
    "weasyprint>=69.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pytest>=9.1.0",
    "pytest-flask>=1.3.0",
    "ruff>=0.15.17",
]
